--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lisarenee/Bamazon#readme",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "easy-table": "^1.0.0",
     "inquirer": "^2.0.0",
     "mysql": "^2.12.0"
